# ai_waste_sorting_robot

./: Another_copy_of_OBB_PLASTIC_DETECTION_NEW_VERSION_GSAVE.ipynb  LICENSE  OBB_PLASTIC_DETECTION_NEW_VERSION_GSAVE.ipynb  README.md
moveit_robot_arm_sim/: .setup_assistant  package.xml
moveit_robot_arm_sim/config/: controllers.yaml  controllers_tuning.yaml  fake_controllers.yaml  gazebo_gains.yaml  ompl_planning.yaml  robot_arm_urdf.srdf  ros_controllers.yaml
moveit_robot_arm_sim/launch/: chomp_planning_pipeline.launch.xml  demo.launch  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  ros_controllers.launch  simple_moveit_controller_manager.launch.xml
robot_arm_urdf/: CMakeLists.txt  PROJECT_LOG.md  package.xml  project_log.md
robot_arm_urdf/config/: joint_trajectory_controller.yaml  moveit.rviz  pid_tuning.perspective  ros_controllers.yaml
robot_arm_urdf/launch/: arm_urdf.launch  start_project.launch  start_simulation.launch  start_tuning.launch  tune_pid.launch
robot_arm_urdf/scripts/: check_camera.py  move_to_pose.py  pick_and_place_client.py  pick_and_place_controller.py  tune_joint5.py  tune_joint_simple.py  waste_detector.py  waste_detector_server.py
robot_arm_urdf/srv/: GetTargetPose.srv
robot_arm_urdf/urdf/: bottle.urdf  camera.xacro  can.urdf  robot_arm_urdf.urdf  world_camera.urdf.xacro
